fix: change scrollbar width

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,7 +41,3 @@
     @apply overflow-x-hidden bg-background text-foreground;
   }
 }
-
-.scrollbar-hidden::-webkit-scrollbar {
-  display: none;
-}
